Updated Images and pictures Styling

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQph8Mr1PBt18LlMJcYGShUQE_yynwGa0GBtleK_wJRrzVxs7n");
 }
 
+}
+
 .navigation > ul > li {
   float: left;
   margin: 3px 8px;
@@ -27,6 +29,7 @@ body {
 .pictures{
   text-align: center;
   box-shadow: 2px 15px 30px white;
+  width: 100%;
 }
 
 #description {
